--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 body {
     font-family: 'Poppins', sans-serif;
+    background-color: #dad7cd;
+    color: #344e41;
 }
+.centered-image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+ h3 {
+    color: #588157;
+ }
