Styled home links to be congruent with the emerging colour scheme; aligned the pages to be horizontally centered

--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
     font-family: 'Poppins', sans-serif;
     background-color: #dad7cd;
     color: #344e41;
+    width: 500px;
+    margin: 0 auto;
 }
 .centered-image {
     display: block;
@@ -11,3 +13,14 @@ body {
  h3 {
     color: #588157;
  }
+
+ .home-links {
+    display: inline-block;
+    padding: 16px 24px 0 16px;
+ }
+
+ .link-colour {
+    color: #588157;
+ }
+
+ 
