--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@ body {
     font-family: 'Poppins', sans-serif;
     background-color: #dad7cd;
     color: #344e41;
-    width: 500px;
+    width: 720px;
     margin: 0 auto;
 }
 .centered-image {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
+   
 }
  h3 {
     color: #588157;
