Fixed home link padding

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
  .home-links {
     display: inline-block;
-    padding: 16px 24px 0 16px;
+    padding: 16px 24px;
  }
 
  .link-colour {
